Week4: Junit test